[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/PlayerCamera.gd" type="Script" id=2]
[ext_resource path="res://theme/MainMenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://models/lady_bug.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.909043
height = 2.09423

[sub_resource type="CapsuleShape" id=11]
radius = 1.79583

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("lady_bug:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "jump"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("lady_bug:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.8, 0.8, 0.8 ), Vector3( 1.1, 1.1, 1.1 ), Vector3( 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.898164, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2255, 0 )
shape = SubResource( 11 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.956437, 0.291938, 0, -0.291938, 0.956437, 0, 3.48986, 5.68605 )
current = true
far = 3000.0
script = ExtResource( 2 )
offset = Vector3( 0, 7, 13 )

[node name="SlowdownTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="SpeedUpTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="FlickeringTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="LivesCountLabel" type="Label" parent="Control"]
margin_left = 60.0
margin_top = 43.0
margin_right = 163.0
margin_bottom = 68.0
text = "Lives: 3"

[node name="lady_bug" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.919 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/jump = SubResource( 13 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="SlowdownTimer" to="." method="_on_SlowdownTimer_timeout"]
[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_SpeedUpTimer_timeout"]
[connection signal="timeout" from="FlickeringTimer" to="." method="_on_FlickeringTimer_timeout"]
